--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.5"
   },
   "dependencies": {
     "@bower_components/Chart.js": "nnnick/Chart.js#^2.0.2",
